--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 deployment/data/base
+/*.launch
+/deployment/
+/packages/
+/releases/
+/.mendix-cache/
+/.classpath
+/.project
+/queueingcanbeagoodthing.mpr.bak
+/queueingcanbeagoodthing.mpr.lock
+/modeler-merge-marker
+/project-settings.user.json
+/javasource/*/proxies/
+/javasource/system/
+/**/node_modules/
+!/javascriptsource/**/node_modules/
+/nativemobile/builds/
